--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">FastAndGo</string>
+    <string name="app_name">Fast &amp; Go</string>
+
+    <!--Main Menu-->
+    <string name="medicines">Medicines</string>
+    <string name="bills_payment">Bills Payment</string>
+    <string name="fast_food">Foods</string>
+    <string name="transport">Transportation</string>
+    <string name="shopping">Shopping</string>
+
 </resources>
